# clean-api/common/http/success.go
@@ -6,13 +6,15 @@ import (
 	"github.com/go-chi/render"
 )
 
-type Payload interface{}
+// @description takes the form of the response depending on the resource
+type Payload interface{} //@name data
 
+// A SuccessResponse is a response that is used when a request has a payload
 type SuccessResponse struct {
 	HTTPStatusCode int     `json:"statusCode"`        // http response status code
 	Message        string  `json:"message,omitempty"` // a comment when necessary
 	Payload        Payload `json:"data,omitempty"`    // any kind of success payload
-}
+} //@name SuccessResponse
 
 func (e *SuccessResponse) Render(w http.ResponseWriter, r *http.Request) error {
 	render.Status(r, e.HTTPStatusCode)
